src/test/resources/public/input/typechecking/pass/pass14.jova
class Evaluation{
    public string getMsg()
  {
    return "adfs";
  }
}

class Main {

  public int main() {
    Evaluation eval;
    return print(eval.getMsg());
  }
}