src/test/resources/public/input/typechecking/fail/main_structure/fail04.jova
class Test{

}

class Main {

  public int main(int a) {
    return 0;
  }
}